objects/Employment_Agreement__c.object
<CustomObject>
    <label>Employment Agreement</label>
    <nameField>
        <label>Employment Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ForTFirstName__c</fullName>
        <formula>$User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForTFirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForTLoggedInUserID__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForTLoggedInUserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForBEmploymentAgreement__c</fullName>
        <formula>(!$User.Employee_Agreement_User__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ForBEmploymentAgreement</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>